--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,11 +9,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Vroom</title>
   </head>
   <body>
